# RES

./: .replit  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  NEWS  Overview.md  README  README.SRC  README.md  USAGE_GUIDE.md  dummy.txt  replit.md  resize_help_complete.txt  run_dev.sh
.ccls-cache/@@home@runner@workspace/: @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@bitsperlong.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno-base.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@int-ll64.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@posix_types.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@types.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@bitsperlong.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@posix_types.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@posix_types_64.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@types.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@close_range.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@falloc.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@limits.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@posix_types.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@stat.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@stddef.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@types.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg___gnuc_va_list.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg___va_copy.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg_header_macro.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg_va_arg.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg_va_copy.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg_va_list.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_header_macro.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_max_align_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_null.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_nullptr_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_offsetof.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_ptrdiff_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_size_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_wchar_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@limits.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdarg.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stddef.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdint.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@alloca.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@assert.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@atomic_wide_counter.h.blob  (+244 more)
.ccls-cache/@home@runner@workspace/: src@bele.h.blob  src@bele_policy.h.blob  src@check@dt_check.cpp  src@check@dt_check.cpp.blob  src@compress@compress.h  src@compress@compress.h.blob  src@conf.h  src@conf.h.blob  src@console@console.h  src@console@console.h.blob  src@except.h  src@except.h.blob  src@file.h.blob  src@filter.h  src@filter.h.blob  src@help.cpp  src@help.cpp.blob  src@linker.h  src@linker.h.blob  src@main.cpp.blob  src@options.h  src@options.h.blob  src@p_elf.h.blob  src@p_elf_enum.h.blob  src@p_mach.cpp  src@p_mach.cpp.blob  src@p_mach.h  src@p_mach.h.blob  src@p_mach_enum.h.blob  src@p_unix.h.blob  src@packer.h.blob  src@packhead.h  src@packhead.h.blob  src@packmast.h.blob  src@pefile.cpp.blob  src@pefile.h.blob  src@stub@amd64-darwin.dylib-entry.h  src@stub@amd64-darwin.dylib-entry.h.blob  src@stub@amd64-darwin.macho-entry.h.blob  src@stub@amd64-darwin.macho-fold.h  (+54 more)
.github/workflows/: ci.yml
attached_assets/: Pasted--1-Rebrand-Identitas-Proyek-Yang-perlu-diubah-Nama-proyek-UPX-Resize-RES-Binary-name-up-1757160357878_1757160357899.txt
doc/: BUGS.txt  THANKS.txt  elf-to-mem.txt  filter.txt  linker.txt  res-doc.html  res-doc.txt  resize.1  resize.pod  selinux.txt
misc/cmake/: functions.cmake  print_info.cmake  self_pack_test.cmake  (+1 more)
src/: bele.h  bele_policy.h  except.cpp  file.cpp  file.h  filter.cpp  help.cpp  lefile.cpp  lefile.h  linker.cpp  main.cpp  msg.cpp  options.cpp  p_com.cpp  p_com.h  p_djgpp2.cpp  p_djgpp2.h  p_elf.h  p_elf_enum.h  p_exe.cpp  p_exe.h  p_lx_elf.cpp  p_lx_elf.h  p_lx_exc.cpp  p_lx_exc.h  p_lx_interp.cpp  p_lx_interp.h  p_lx_sh.cpp  p_lx_sh.h  p_mach.cpp  p_mach_enum.h  p_ps1.cpp  p_ps1.h  p_sys.cpp  p_sys.h  p_tmt.cpp  p_tmt.h  p_tos.cpp  p_tos.h  p_unix.cpp  (+29 more)
(+152 files in other folders)
